<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simon Alzheimer</string>

    <!-- Static Elements -->
    <string name="uuid">UUID:</string>
    <string name="register">Register</string>
    <string name="ipValue">10.0.2.2:5500</string>

    <!-- Dialog and Toast Messages -->
    <string name="msg_e_invalid_ip">"Invalid IP:PORT, please try again."</string>
    <string name="msg_d_valid_ip">"IP ok!"</string>
    <string name="msg_d_connected">Conectado!</string>
    <string name="msg_d_disconnected">Desconectado!</string>
    <string name="msg_d_reconnected">Reconectado!</string>
    <string name="msg_e_servicenotrunning">Communication Service is not running!</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_routines">Routines</string>
    <string name="title_alerts">Alerts</string>
    <string name="condition_txt">Conditions</string>
    <string name="action_txt">Actions</string>
    <string name="routine_title">Routine %1$d</string>
    <string name="cond_popup_title">Set Condition</string>
    <string name="cond_popup_type_txt">Type:</string>
    <string name="cond_popup_value_txt">Value:</string>
    <string name="action_popup_title">Set Action</string>
    <string name="cancel_btn_text">Cancel</string>
    <string name="okay_btn_text">Ok</string>
    <string name="alerts_frag_title">Alerts</string>
    <string name="alerts_empty_msg">No Alerts</string>
    <string name="welcome_title">Welcome back!</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="dash_alert_msg">You have %1$d alert(s).</string>
    <string name="dash_routine_msg">You have set %1$d routine(s).</string>
    <string name="cond_placeholder">- %1$s: %2$d</string>
    <string name="action_placeholder">- %1$s</string>

    <string name="routines_empty_msg">No Routines. \nPress + button to create a new routine.</string>
</resources>
