<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/squircle_bg"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:orientation="vertical"
        android:padding="5dp"
        tools:layout_editor_absoluteX="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/routine_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_weight="1"
                android:text="@string/routine_title"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/alert_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />

                <Switch
                    android:id="@+id/routine_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="20dp"
                    android:layout_weight="0"
                    android:checked="true" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="#ffffff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/text_margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/condition_txt"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textColor="@android:color/background_light"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cond_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cond_placeholder"
                    android:textColor="@android:color/background_light" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/text_margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/actions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_txt"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textColor="@android:color/background_light"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/act_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_placeholder"
                    android:textColor="@android:color/background_light" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
