<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"

    android:minWidth="250dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/popup_bg"
        android:minWidth="250dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:text="@string/cond_popup_title"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="160dip"
            android:layout_height="1dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="#cecece" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/cond_popup_type_txt"
            android:textAlignment="center"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/squircle_bg_gray"
            android:backgroundTint="#eeeeee"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="50dp" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/cond_popup_value_txt"
            android:textAlignment="center"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/squircle_bg_gray"
            android:backgroundTint="#eeeeee"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/not_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="Not" />

            <View
                android:layout_width="160dip"
                android:layout_height="1dip"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:background="#cecece" />

            <Spinner
                android:id="@+id/value_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp" />
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_cond_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_btn_text"
                android:textColor="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary" />

            <Button
                android:id="@+id/ok_cond_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/okay_btn_text"
                android:textColor="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>