<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/squircle_bg"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="10dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    app:srcCompat="@drawable/simon_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/welcome_title" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="#ffffff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    app:srcCompat="@drawable/ic_person_white_24dp" />

                <TextView
                    android:id="@+id/patient_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="patient_name"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/call_btn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="?attr/selectableItemBackground"
                    android:backgroundTint="#75ffffff"
                    app:srcCompat="@drawable/ic_call_white_24dp" />

                <ImageButton
                    android:id="@+id/msg_btn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="?attr/selectableItemBackground"
                    android:backgroundTint="#75ffffff"
                    app:srcCompat="@drawable/ic_message_white_24dp" />

                <!--android:background="@drawable/popup_bg"-->
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/routines_dash_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/squircle_bg"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="10dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/routines_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    app:srcCompat="@drawable/ic_dashboard_white_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_routines"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="#ffffff" />

            <TextView
                android:id="@+id/routines_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dash_routine_msg"
                android:textColor="@android:color/background_light"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/alerts_dash_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/squircle_bg"
            android:backgroundTint="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="10dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/bell_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    app:srcCompat="@drawable/ic_notifications_none_white_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/alerts_frag_title"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="#ffffff" />

            <TextView
                android:id="@+id/alert_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dash_alert_msg"
                android:textColor="@android:color/background_light"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>